--- a/WolvenKit/Views/Shell/DockingAdapter.xaml
+++ b/WolvenKit/Views/Shell/DockingAdapter.xaml
@@ -4,6 +4,7 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:local="clr-namespace:WolvenKit.Views.Shell"
+ xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
  xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
@@ -11,6 +12,7 @@
  xmlns:converters1="clr-namespace:WolvenKit.Converters"
  xmlns:others="clr-namespace:WolvenKit.Views.Others"
  xmlns:tools_controls="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Tools.WPF"
+ d:DataContext="{d:DesignInstance Type={x:Type shell:AppViewModel}}"
  d:DesignHeight="300"
  d:DesignWidth="300"
  mc:Ignorable="d"             
@@ -114,12 +116,7 @@
                     <Setter Property="Background" Value="{StaticResource ContentBackgroundAlt2}" />
                     <Setter Property="Foreground" Value="#ffffff" />
                 </Style>
-            </syncfusion:DockingManager.TabItemStyle>
-            <syncfusion:DockingManager.TabControlStyle>
-                <Style TargetType="{x:Type TabControl}" BasedOn="{StaticResource DockTabControlStyle}">
-                    <Setter Property="H" Value="30" />
-                </Style>
-            </syncfusion:DockingManager.TabControlStyle-->
+            </syncfusion:DockingManager.TabItemStyle-->
             <syncfusion:DockingManager.DockedElementTabbedHostStyle>
                 <Style TargetType="{x:Type tools_controls:DockedElementTabbedHost}" BasedOn="{StaticResource SyncfusionDockedElementTabbedHostStyle}">
                     <Setter Property="Margin" Value="0" />
