adds flat mode for PE

--- a/WolvenKit/Views/Tools/PropertiesView.xaml
+++ b/WolvenKit/Views/Tools/PropertiesView.xaml
@@ -327,8 +327,9 @@
             EnableLabelEdit="False"
             CloseButtonType="Hide"
             CloseTabOnMiddleClick="False"
-            AllowDragDrop="False"
             ShowTabItemContextMenu="False"
+            ShowTabListContextMenu="False"
+            AllowDragDrop="False"
             BorderThickness="0"
             Margin="0"
             Padding="0"
